# Crawl4AI-RAG-MCP-Server

./: .clinerules  .dockerignore  .gitignore  README.md  crawled_pages.sql  pyproject.toml  test.py
docs/: database.md  system_overview.md
docs/adr/: template.md
docs/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: api.py  api_v2.py  crawl4ai_mcp.py  crawled_pages_rows.csv  pdf_parser.py  sitemap.xml  test.md  test_crawl.py  utils.py
test/: README.md  README_semantic_chunking.md  compare_chunks.py  generate_chunk_report.py  run_pdf_test.bat  run_semantic_test.sh  run_test.bat  semantic_chunks.json  semantic_chunks.txt  standard_chunks.json  standard_chunks.txt  test_pdf_semantic_chunking.py  test_semantic_chunking.py
