[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "mcp==1.9.1",
    "supabase==2.15.1",
    "openai==1.71.0",
    "dotenv==0.9.9",
    "fastapi==0.115.12",
    "pydantic==2.11.5",
    "requests==2.32.3",
    "llama-index-core==0.12.40",
    "llama-index-llms-gemini==0.5.0",
    "PyMuPDF"==1.26.0,
    "pypdf"==5.6.0,
]
